# streamlit-data-loader

./: .env.example  .gitignore  DECISIONS.md  DEPENDENCY-EMERGENCY-PROTOCOL.txt  PROTOCOL.md  README.md  ROADMAP.md  SESSION_LOG_TEMPLATE.json  app.py  constraints.txt  data_loader.py  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-lock.txt  requirements-ui.txt  requirements.in  requirements.txt  utils.py
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py
config/: config.example.yaml  config.yaml.bak2
pages/: 1_Impostazioni_Download.py  2_Visualizza_Dati_Grezzi.py  3_Pulizia_e_Quality_Check.py  4_Grafici_Interattivi.py  5_Esporta_Dataset.py  6_Guida_Online.py  Guida.py
scripts/: smoke_spot_perp_books.py
src/: cli.py
src/analysis/: metrics.py  report.py  tuning.py
src/arb/: market_graph.py  orderbook_cache.py  paper_trader.py  profit_persistence.py  triangular_scanner.py
src/cli/: __init__.py  analyze_validation.py  debug_graph.py  run_spot_perp_paper.py  run_spot_perp_scanner.py  spot_perp_assets.py
src/config/: loader.py  models.py  snapshot.py
src/core/: logging.py
src/db/: models.py  run_metadata.py  runtime_status.py  (+1 more)
tests/: test_feed_health.py  test_hyperliquid_client_spot_coin.py  test_market_graph.py  test_orderbook.py  test_profit_opportunity.py  test_profit_persistence.py  test_scanner.py  test_spot_perp_auto_assets.py  test_spot_perp_decision_trace.py  test_spot_perp_scan_metrics.py  test_spot_perp_scanner.py
tools/: scan_ws_valid_spot_pairs.py
web-dashboard/: README.md  package.json
(+26 files in other folders)
